--- a/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
+++ b/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
@@ -65,6 +65,9 @@
               <img [src]="comp.complogo" class="company-logo">
             </div>
             <mat-card-title class="truncate-title">{{ comp.companyname }}</mat-card-title>
+            <div  style=" margin-left: auto;">
+              <img [src]="va.icon.company" alt="icon" class="company-logo" (click)="opencompanymap(comp,compmapmodal)"> >
+            </div>
           </mat-card-header>
 
           <mat-card-content>
@@ -147,4 +150,8 @@
 
 <ng-template #compprofilemodal let-modal>
   <app-companyprofilepage [modal]="modal"> </app-companyprofilepage>
+</ng-template>
+
+<ng-template #compmapmodal let-modal>
+  <app-companymappage [modal]="modal" [editcompany]="activecompany" ></app-companymappage>
 </ng-template>
